Historisk data er nå filtrert, sortert, flyttet rundt på, og fikset på slik at vi får siste aktive data som er relatert ved sivilstand!
* Laget test klasse for å bygge test data som gjenproduserte problemet i DEV og PROD (falsk data)

* Ryddet i test

* Litt refaktorering som flytter på ting (editorconfig fungerer vel?)